--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -319,7 +319,7 @@ header {
   left: 0;
   z-index: 3;
   width: 100%;
-  margin: 16px; }
+  margin: 16px 0; }
   @media (min-width: 79.9375em) {
     header {
       margin: 32px; } }
@@ -586,6 +586,66 @@ section#bio {
           right: 85px;
           transform: scale(0.8); } }
 
+section#materiais {
+  padding: 24px 0;
+  background-color: #F1F4F5; }
+  section#materiais h4 {
+    font-family: "Agrandir";
+    font-weight: bold;
+    font-stretch: semi-expanded;
+    position: relative;
+    z-index: 1;
+    margin: 0 0 32px;
+    font-size: 2rem;
+    line-height: 1;
+    letter-spacing: 0.02em;
+    color: #1BACE0; }
+    @media (min-width: 79.9375em) {
+      section#materiais h4 {
+        font-size: 2.25rem; } }
+  section#materiais .materialContainer {
+    flex-flow: nowrap;
+    overflow: auto; }
+    @media (min-width: 79.9375em) {
+      section#materiais .materialContainer {
+        flex-flow: wrap;
+        overflow: inherit; } }
+  section#materiais .materialContent {
+    min-width: 320px;
+    margin: 0 0 32px;
+    padding: 48px 32px;
+    background-color: #F1F4F5;
+    border: 1px solid rgba(33, 33, 33, 0.12);
+    border-radius: 2px; }
+    section#materiais .materialContent .icon {
+      position: relative;
+      display: inline-block; }
+      section#materiais .materialContent .icon:before {
+        display: inline-block;
+        width: 48px;
+        height: 48px;
+        content: '';
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        z-index: 0;
+        background-color: #FFFF0A;
+        border-radius: 50%; }
+      section#materiais .materialContent .icon svg {
+        position: relative;
+        z-index: 1; }
+    section#materiais .materialContent h5 {
+      font-family: "Agrandir";
+      font-weight: bold;
+      font-stretch: semi-expanded;
+      position: relative;
+      z-index: 1;
+      margin: 56px 0 24px;
+      font-size: 1.5rem;
+      line-height: 1;
+      letter-spacing: 0.02em;
+      color: #1BACE0; }
+
 section#mobiliza .mobilizaContainer {
   position: relative;
   z-index: 0;
@@ -679,61 +739,75 @@ section#reconhecimentos .textContent {
     letter-spacing: .5;
     color: #1BACE0; }
 
-section#materiais {
-  padding: 24px 0;
-  background-color: #F1F4F5; }
-  section#materiais h4 {
-    font-family: "Agrandir";
-    font-weight: bold;
-    font-stretch: semi-expanded;
-    position: relative;
-    z-index: 1;
-    margin: 0 0 32px;
-    font-size: 2rem;
-    line-height: 1;
-    letter-spacing: 0.02em;
-    color: #1BACE0; }
-    @media (min-width: 79.9375em) {
-      section#materiais h4 {
-        font-size: 2.25rem; } }
-  section#materiais .materialContainer {
-    flex-flow: nowrap;
-    overflow: auto; }
-    @media (min-width: 79.9375em) {
-      section#materiais .materialContainer {
-        flex-flow: wrap;
-        overflow: inherit; } }
-  section#materiais .materialContent {
-    min-width: 320px;
-    margin: 0 0 32px;
-    padding: 48px 32px;
-    background-color: #F1F4F5;
-    border: 1px solid rgba(33, 33, 33, 0.12);
-    border-radius: 2px; }
-    section#materiais .materialContent .icon {
-      position: relative;
-      display: inline-block; }
-      section#materiais .materialContent .icon:before {
-        display: inline-block;
-        width: 48px;
-        height: 48px;
-        content: '';
-        position: absolute;
-        top: -10px;
-        right: -10px;
-        z-index: 0;
-        background-color: #FFFF0A;
-        border-radius: 50%; }
-      section#materiais .materialContent .icon svg {
-        position: relative;
-        z-index: 1; }
-    section#materiais .materialContent h5 {
+section#propostas {
+  margin: 0 0 32px; }
+  section#propostas .propostasContainer {
+    padding: 24px 64px 0;
+    background-color: #2954CC;
+    color: #F1F4F5; }
+    section#propostas .propostasContainer h4 {
       font-family: "Agrandir";
       font-weight: bold;
       font-stretch: semi-expanded;
       position: relative;
       z-index: 1;
-      margin: 56px 0 24px;
+      margin: 0 0 32px;
+      font-size: 2rem;
+      line-height: 1;
+      letter-spacing: 0.02em;
+      color: #F1F4F5; }
+      @media (min-width: 79.9375em) {
+        section#propostas .propostasContainer h4 {
+          font-size: 2.25rem; } }
+    section#propostas .propostasContainer .propostasContent {
+      margin: 0;
+      padding: 32px 0;
+      color: #F1F4F5;
+      text-align: center;
+      border-top: 1px solid #1BACE0; }
+      @media (min-width: 79.9375em) {
+        section#propostas .propostasContainer .propostasContent {
+          margin: 0 0 24px;
+          padding: 48px 24px 48px 0;
+          text-align: left; } }
+      section#propostas .propostasContainer .propostasContent .icon {
+        position: relative;
+        display: inline-block; }
+        section#propostas .propostasContainer .propostasContent .icon:before {
+          display: inline-block;
+          width: 48px;
+          height: 48px;
+          content: '';
+          position: absolute;
+          top: -10px;
+          right: -10px;
+          z-index: 0;
+          background-color: #1BACE0;
+          border-radius: 50%; }
+        section#propostas .propostasContainer .propostasContent .icon svg {
+          position: relative;
+          z-index: 1; }
+      section#propostas .propostasContainer .propostasContent h5 {
+        font-family: "Agrandir";
+        font-weight: bold;
+        font-stretch: semi-expanded;
+        position: relative;
+        z-index: 1;
+        margin: 24px 0;
+        font-size: 1.5rem;
+        line-height: 1;
+        letter-spacing: 0.02em;
+        color: #F1F4F5; }
+  section#propostas .planoContainer {
+    padding: 32px 32px 0;
+    background-color: #F1F4F5; }
+    section#propostas .planoContainer h5 {
+      font-family: "Agrandir";
+      font-weight: bold;
+      font-stretch: semi-expanded;
+      position: relative;
+      z-index: 1;
+      margin: 24px 0 8px;
       font-size: 1.5rem;
       line-height: 1;
       letter-spacing: 0.02em;
