--- a/app/assets/scss/_sprite.sass
+++ b/app/assets/scss/_sprite.sass
@@ -4,10 +4,30 @@ $bg-pontinhos-offset-x: 0px
 $bg-pontinhos-offset-y: 0px
 $bg-pontinhos-width: 476px
 $bg-pontinhos-height: 476px
-$bg-pontinhos-total-width: 476px
+$bg-pontinhos-total-width: 514px
 $bg-pontinhos-total-height: 476px
 $bg-pontinhos-image: '../images/sprite.png'
-$bg-pontinhos: 0px 0px 0px 0px 476px 476px 476px 476px '../images/sprite.png'
+$bg-pontinhos: 0px 0px 0px 0px 476px 476px 514px 476px '../images/sprite.png'
+$icn-seta-left-x: 476px
+$icn-seta-left-y: 0px
+$icn-seta-left-offset-x: -476px
+$icn-seta-left-offset-y: 0px
+$icn-seta-left-width: 38px
+$icn-seta-left-height: 72px
+$icn-seta-left-total-width: 514px
+$icn-seta-left-total-height: 476px
+$icn-seta-left-image: '../images/sprite.png'
+$icn-seta-left: 476px 0px -476px 0px 38px 72px 514px 476px '../images/sprite.png'
+$icn-seta-right-x: 476px
+$icn-seta-right-y: 72px
+$icn-seta-right-offset-x: -476px
+$icn-seta-right-offset-y: -72px
+$icn-seta-right-width: 38px
+$icn-seta-right-height: 72px
+$icn-seta-right-total-width: 514px
+$icn-seta-right-total-height: 476px
+$icn-seta-right-image: '../images/sprite.png'
+$icn-seta-right: 476px 72px -476px -72px 38px 72px 514px 476px '../images/sprite.png'
 
 @mixin sprite-width($sprite)
   width: nth($sprite, 5)
