--- a/app/assets/scss/_sprite.sass
+++ b/app/assets/scss/_sprite.sass
@@ -8,6 +8,16 @@ $bg-pontinhos-total-width: 514px
 $bg-pontinhos-total-height: 476px
 $bg-pontinhos-image: '../images/sprite.png'
 $bg-pontinhos: 0px 0px 0px 0px 476px 476px 514px 476px '../images/sprite.png'
+$icn-seta-agenda-x: 476px
+$icn-seta-agenda-y: 144px
+$icn-seta-agenda-offset-x: -476px
+$icn-seta-agenda-offset-y: -144px
+$icn-seta-agenda-width: 34px
+$icn-seta-agenda-height: 33px
+$icn-seta-agenda-total-width: 514px
+$icn-seta-agenda-total-height: 476px
+$icn-seta-agenda-image: '../images/sprite.png'
+$icn-seta-agenda: 476px 144px -476px -144px 34px 33px 514px 476px '../images/sprite.png'
 $icn-seta-left-x: 476px
 $icn-seta-left-y: 0px
 $icn-seta-left-offset-x: -476px
